--- a/src/main/resources/messages_tr_TR.properties
+++ b/src/main/resources/messages_tr_TR.properties
@@ -1,8 +1,10 @@
 home.project.name=Spring Boot - i18N Örnek Proje
 home.lang.text=Dil
 home.products.text=Ürünler
+home.project.author=caysever
 
 product.name.text = Ürün Adı
+product.detail.text = Detay
 product.price.text = Fiyat
 product.stockCount.text = Stok Adedi
 
