--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,8 +1,10 @@
 home.project.name=Spring Boot - i18N Simple Project
 home.lang.text=Lang
 home.products.text=Products
+home.project.author=A.Akkus
 
 product.name.text = Name
+product.detail.text = Details
 product.price.text = Price
 product.stockCount.text = Available Stock
 
